--- a/src/pages/helena-quince.astro
+++ b/src/pages/helena-quince.astro
@@ -50,7 +50,7 @@ import Instagram from '../components/icons/Instagram.astro'
   </section>
 
   <section class='flex flex-col relative items-center gap-8 py-32 font-audrey'>
-    <p class='text-2xl text-center text-pretty'>
+    <p class='text-2xl text-center text-pretty text-helena-primary'>
       La vida es un camino <br />
       lleno de luces... y mis quince <br />
       será una de las más brillantes. <br />
