--- a/src/pages/helena-quince.astro
+++ b/src/pages/helena-quince.astro
@@ -179,7 +179,9 @@ import Instagram from '../components/icons/Instagram.astro'
   <section
     class='flex flex-col relative items-center py-32 bg-helena-background [&>img]:z-10 [&>*]:z-20'
   >
-    <p class='mb-12 text-2xl text-center text-pretty font-audrey'>
+    <p
+      class='mb-12 text-2xl text-center text-helena-primary text-pretty font-audrey'
+    >
       Como no quiero perder ningún detalle de esta fiesta, <br />
       te invito a compartir tus fotos <br />
       y me ayudes a inmortalizar <br />
