--- a/src/pages/helena-quince.astro
+++ b/src/pages/helena-quince.astro
@@ -181,7 +181,8 @@ import Instagram from '../components/icons/Instagram.astro'
     <p
       class='mb-12 text-2xl text-center text-helena-primary text-pretty font-audrey'
     >
-      Como no quiero perder ningún detalle de esta fiesta, <br />
+      Como no quiero perder ningún <br />
+      detalle de esta fiesta, <br />
       te invito a compartir tus fotos <br />
       y me ayudes a inmortalizar <br />
       estos momentos. <br /> Etiquetame!
