song message and date fix

--- a/src/pages/helena-quince.astro
+++ b/src/pages/helena-quince.astro
@@ -159,7 +159,7 @@ import Instagram from '../components/icons/Instagram.astro'
     </p>
 
     <a
-      href='https://wa.me/+5493571563307?text=Hola%20M%C3%ADa!%20La%20noche%20de%20tu%20fiesta,%20me%20encantar%C3%ADa%20escuchar%20la%20canci%C3%B3n...%0A'
+      href='https://wa.me/+5493571563307?text=Hola%20Helena!%20La%20noche%20de%20tu%20fiesta,%20me%20encantar%C3%ADa%20escuchar%20la%20canci%C3%B3n...%0A'
       class='flex items-center gap-2 rounded-lg bg-helena-font text-helena-primary px-8 py-2 text-lg transition-opacity ease-in-out hover:opacity-85 md:px-10 md:text-xl z-20'
       target='_blank'
     >
@@ -239,7 +239,7 @@ import Instagram from '../components/icons/Instagram.astro'
     >
       Confirmá tu asistencia antes <br />
       del
-      <strong class='font-semibold text-xl'>10/03</strong> haciendo click aquí.
+      <strong class='font-semibold text-xl'>23/06</strong> haciendo click aquí.
     </p>
 
     <span class='flex gap-2 md:gap-4'>
